# tearoom

./: LICENSE  Makefile  README.md  ROLLBACK_REFERENCE.md  autostart.sh  check_keybindings.py  config.py  pyproject.toml  rollback.sh
.cursor/: instructions.md
.cursor/rules/: 00-python-style.mdc  10-qtile-architecture.mdc  20-keybindings.mdc  30-widgets-and-panels.mdc  40-scripts-and-services.mdc  50-testing-and-reload.mdc  70-security-and-safety.mdc  80-meta-generate-new-rules.mdc
backup/: config.py  groups.py  hooks.py  keys.py  layouts.py  screens.py
modules/: apps.py  constants.py  groups.py  hooks.py  keys.py  layouts.py  screens.py  theme.py  utils.py  widgets.py
qtile/: config.py  pyproject.toml
qtile/scripts/: audio-sink.sh  autostart.sh  blutetooth.sh  volume.sh
qtile/tearoom/: apps.py  constants.py  groups.py  hooks.py  keys.py  layouts.py  paths.py  screens.py  settings.py  theme.py  utils.py  widgets.py
scripts/: layout_switcher.py  power-menu.sh  rofi-layout-switcher.sh
setup/: 99-moonlander-no-suspend.rules  install-keyboard-fix-systemd.sh  install-keyboard-fix-udev.sh
tests/: conftest.py  qtile_check.py  test_imports.py
